zeta-code/tui/src/app/snapshots/zeta_tui__app__session_manager_tests__agents_command_completion.snap
---
source: zeta-code/tui/src/app/session_manager_tests.rs
expression: render(&app)
---
  ≡ .

























  /agents                    open the Session Manager
  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮
  │ > /agents                                                                                    │
  ╰──────────────────────────────────────────────────────────────────────────── Automatic model ─╯

  Enter send  ·  shift+tab permissions  ·  /home                              ⏸ ask permissions on
