zeta-code/tui/src/app/snapshots/zeta_tui__app__session_manager_tests__agents_manager_after_preview_closed.snap
---
source: zeta-code/tui/src/app/session_manager_tests.rs
expression: render(&app)
---
    ▄  ▄     Zeta Code v0.1.0
  ▗█▛██▜█▖   Automatic model · Access unknown
  ▝▜████▛▘   .
    ▝  ▘


  Idle (1)
> ○ Snapshot session
  Archived (0)


















────────────────────────────────────────────────────────────────────────────────────────────────────
>
────────────────────────────────────────────────────────────────────────────────────────────────────

  Enter to open · Space to preview · Ctrl+X to archive · i to details
