zeta-code/tui/src/app/snapshots/zeta_tui__app__session_manager_tests__agents_manager_transient_session_preview.snap
---
source: zeta-code/tui/src/app/session_manager_tests.rs
expression: render(&app)
---
   ▀▙▄▄▄▟▀    Zeta Code v0.1.0
  ▐███████▌   Automatic model · Access unknown
   ▝█▀▀▀█▘    .

Idle (1)
> ○ Snapshot session












  Session preview─────────────────────────────────────────────────────────────────────────────────
  Session: Snapshot session
  ID: current
  Status: idle
  Time:
  Branches: 1 branch
  Size: 0 tokens
  Root: main · active



  Esc to close

  space to preview · ctrl+x to archive
