zeta-code/tui/src/app/snapshots/zeta_tui__app__session_manager_tests__agents_session_after_resume_restores_manager_hint.snap
---
source: zeta-code/tui/src/app/session_manager_tests.rs
expression: render(&app)
---

  ┌───────── Zeta Code v0.1.0 ───────────────────────────────────────────────────────────────────┐
  │                                   │  Tips for getting started                                │
  │            Welcome back!          │  Use @ to mention workspace files and / to discover      │
  │                                   │  commands.                                               │
  │               ╭─────╮             │  ──────────────────────────────────────────────────────  │
  │               │  ζ  │             │  Try asking                                              │
  │               ╰─┬─┬─╯             │  “Explain how this workspace is structured.”             │
  │                                   │  “Implement the change and run the relevant tests.”      │
  │         Ready when you are        │                                                          │
  │                  .                │                                                          │
  └──────────────────────────────────────────────────────────────────────────────────────────────┘















────────────────────────────────────────────────────────────────────────────────────────────────────
❯
────────────────────────────────────────────────────────────────────────────────────────────────────
                                                                                          ← agents
  ⏸ ask permissions on (shift+tab to cycle)
