zeta-code/tui/src/app/snapshots/zeta_tui__app__session_manager_tests__session_details_loading.snap
---
source: zeta-code/tui/src/app/session_manager_tests.rs
assertion_line: 47
expression: loading
---
    ▄  ▄     Zeta Code v0.1.0
  ▗█▛██▜█▖   Automatic model · Access unknown
  ▝▜████▛▘   .
    ▝  ▘


Idle (1)
> ○ Snapshot session
Archived (0)












  Session details─────────────────────────────────────────────────────────────────────────────────
  Session:     Snapshot session
  Session ID:  current
  Lifecycle:   active
  Status:      idle
  Threads:     1
  Total usage: 0 tokens
  Model calls: 0
  Threads:     Loading…

  Esc to close
