zeta-code/tui/src/app/snapshots/zeta_tui__app__session_manager_tests__session_manager_idle_collapsed.snap
---
source: zeta-code/tui/src/app/session_manager_tests.rs
expression: render(&app)
---
    ▄  ▄     Zeta Code v0.1.0
  ▗█▛██▜█▖   Automatic model · Access unknown
  ▝▜████▛▘   .
    ▝  ▘


> Idle (1)
  Archived (0)



















────────────────────────────────────────────────────────────────────────────────────────────────────
>
────────────────────────────────────────────────────────────────────────────────────────────────────

  Enter to expand · Esc to return to input
